--- a/authentication_JWT/auth-app/src/index.css
+++ b/authentication_JWT/auth-app/src/index.css
@@ -1,76 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* || UTILITY CLASSES */
-.errmsg {
-  color: firebrick;
-}
-
-/* || GENERAL STYLES */
-
 body {
-  font: 1.5rem 'Nunito', sans-serif;;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
   min-height: 100vh;
-  background-color: #0F172A;
-  color: #fff;
-}
-
-input, button {
-  font: inherit;
-}
-
-#root {
-  min-height: 100vh;
-  display: flex;
-  padding: 1rem;
-}
-
-section {
-  width: min(100%, 500px);
-}
-
-a, a:visited {
-  color: whitesmoke;
-}
-
-a:hover, a:focus {
-  color: rgba(245, 245, 245, 0.9);
-}
-
-/* || LOGIN */
-
-.login form {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-.login input, .login button {
-  padding: 0.5em;
-  border-radius: 15px;
-}
-
-/* || PAGES */
-
-.public, .welcome, .users {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.public main {
-  flex-grow: 1;
-  border-top: 2px solid #fff;
-  border-bottom: 2px solid #fff;
-  padding: 1rem;
+.App-link {
+  color: #61dafb;
 }
 
-.users ul {
-  list-style-type: none;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
+
