--- a/authentication_JWT/auth-app/src/index.css
+++ b/authentication_JWT/auth-app/src/index.css
@@ -86,6 +86,14 @@ section {
   align-items: center;
 }
 
+loading {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 form {
   background-color: rgba(54, 0, 91, 0.4);
   padding: 5rem 5rem;
